--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,7 @@ add_subdirectory(src)
 
 add_executable(main_exe ${SOURCE_FILES})
 target_link_libraries(main_exe payroll_library)
+
+project (payroll)
+to
+project (payroll_library)
